--- a/scripts/ObjectWarnings.ipynb
+++ b/scripts/ObjectWarnings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,13 +32,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lineare Funktion über 2 Punkte bestimmen:\n",
+    "\n",
+    "\n",
+    "## $ f(x) = \\frac{y_2-y_1}{x_2-x_1} \\cdot (x-x_1) + y_1 $\n",
+    "\n",
+    "<br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Farbwerte\n",
+    "\n",
+    "### $red(x) = -\\frac{1}{x_{max}-x_{min}} \\cdot (x-x_{min}) + 1 $ \n",
+    "$ red(x)=\\left\\{\\begin{array}{lll} 0; & x > x_{max} \\\\ red(x); & x_{min} <= x <= x_{max} \\\\ 1; & x < x_{min} \\end{array}\\right.  $\n",
+    "\n",
+    "### $green(x) = \\frac{1}{x_{max}-x_{min}} \\cdot (x-x_{min}) $\n",
+    "<br>\n",
+    "\n",
+    "## Rumblewert\n",
+    "\n",
+    "### $rumble(x) = -\\frac{1}{x_{critical}-x_{min}} \\cdot (x-x_{min}) + 1 $\n",
+    "<br>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lineare Funktion über 2 Punkte bestimmen:\n",
-    "# f(x) = (y_2-y_1)/(x_2-x_1) * (x-x_1) + y_1\n",
     "# round(f(x), 2) --> Funktionswert runden (2 FloatingPoints)\n",
     "# max(min(1, f(x)), 0) --> 0 <= f(x) <= 1\n",
     "\n",
@@ -60,7 +88,7 @@
     "\n",
     "    if x <= crit_dist/n:\n",
     "        return 0\n",
-    "    elif x > crit_dist/3 and x <= crit_dist:\n",
+    "    elif x > crit_dist/n and x <= crit_dist:\n",
     "        p = (0.5/(crit_dist/n)) * (x-(crit_dist/n)) + 0.5\n",
     "        p = round(p, r)\n",
     "        p = max(min(1, p), 0.5)\n",
@@ -71,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
